--- a/app/src/main/res/drawable/circ_prog.xml
+++ b/app/src/main/res/drawable/circ_prog.xml
@@ -6,5 +6,5 @@
         android:shape="ring"
         android:thickness="5dp"
         android:useLevel="true">
-        <solid android:color="@color/colorPrimary" />
+        <solid android:color="@color/colorAccent" />
     </shape>
