--- a/app/src/main/res/layout/activity_dash.xml
+++ b/app/src/main/res/layout/activity_dash.xml
@@ -227,7 +227,7 @@
                 android:layout_height="fill_parent"
                 android:layout_marginTop="10dp"
                 android:gravity="center_horizontal"
-                android:text="Data: Live"
+                android:text="Status: Connecting..."
                 android:textSize="22sp"
                 android:textStyle="bold" />
         </LinearLayout>
